CLA-214 - Modal content is mostly aligned... I will have to make sure all modal share all these styles as i have to write this same CSS 3x over it seems...

--- a/frontend-project-management-console/src/ionic/app/app.scss
+++ b/frontend-project-management-console/src/ionic/app/app.scss
@@ -23,6 +23,14 @@ ion-icon[name=menu] {
   color: color($colors, white);
 }
 
+.item-md.item-block .item-inner{
+  padding-right: 0;
+}
+
+.item-md{
+  padding-left: 0;
+}
+
 .toolbar {
   background-color: color($colors, primary);
   color: color($colors, light);
